syntax = "proto2";
package ssmessage;
option go_package = "initialthree/protocol/ss/ssmessage";

message reportGate {
	required string peerID       = 1;
	required string externalAddr = 2;
	required int32  playerNum    = 3;	
}
